refactor: 다른 dao에서 entity 참조 제거